updated kotlin plugin.

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -30,15 +30,20 @@ task clean(type: Delete) {
 ext {
     _app_name                  = 'karpardaz'
 
-    _min_sdk_version           = 19
-    _target_sdk_version        = 28
-    _compiled_sdk_version      = 28
+    _min_sdk_version           = 21
+    _build_tool_version        = '29.0.2'
+    _target_sdk_version        = 29
+    _compiled_sdk_version      = 29
 
-    _kotlin_version            = '1.3.71'
-    _ktx_core_version          = '1.0.2'
+    _kotlin_version            = '1.3.72'
+    _ktx_core_version          = '1.2.0'
     _javax_annotation_version  = '1.3.2'
-    _app_compat_version        = '1.1.0'
+    _app_compat_version        = '1.2.0-beta01'
+    _material_version          = '1.2.0-alpha06'
+//    _multidex_version          = '2.0.1'
     _constraint_layout_version = '1.1.3'
+//    _cardview_version          = '1.0.0'
+    _androidx_core_version     = '1.2.0'
     _retrofit_version          = '2.8.1'
     _dagger_version            = '2.27'
     _rxjava_version            = '2.2.19'
@@ -46,6 +51,15 @@ ext {
     _room_library_version      = '2.2.5'
     _junit_version             = '4.12'
     _android_junit_version     = '1.1.0'
-    _espresso_core_version     = '3.1.1'
+    _espresso_core_version     = '3.2.0'
+    _androidx_test_version     = '1.1.1'
+    _mockito_version           = '2.8.9'
+    _hamcrest_version          = '1.3'
+    _arch_testing_version      = '1.1.1'
+    _android_x_annotations     = '1.1.0'
+    _android_x_legacy_support  = '1.0.0'
+    _recycler_view_version     = '1.0.0'
+    _app_compat_version        = '1.0.2'
+    _arch_lifecycle_version    = '2.2.0'
 
 }
