--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ task clean(type: Delete) {
 
 ext {
     _app_name                  = 'karpardaz'
+    _version_code              = 1
+    _version_name              = "1.0.0"
 
     _min_sdk_version           = 19
     _build_tool_version        = '29.0.2'
@@ -46,6 +48,7 @@ ext {
     _retrofit_version          = '2.8.1'
     _rxjava_version            = '2.2.19'
     _rxandroid_version         = '2.0.1'
+    _hilt_viewmodel_version    = '1.0.0-alpha02'
     _room_library_version      = '2.2.5'
     _joda_version              = '2.10.6'
     _junit_version             = '4.12'
