--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
 }
 
@@ -37,11 +38,19 @@ ext {
     _compiled_sdk_version      = 29
 
     _app_compat_version        = '1.2.0'
-    _constraint_layout_version = '2.0.1'
-    _material_version          = '1.3.0-alpha02'
-    _room_library_version      = '2.3.0-alpha04'
+    _constraint_layout_version = '2.0.4'
+    _material_version          = '1.4.0-alpha01'
+    _room_library_version      = '2.3.0-beta03'
     _retrofit_version          = '2.8.1'
     _ok_http_version           = '4.9.1'
     _joda_version              = '2.10.6'
     _jalali_calendar_version   = '1.3.3'
+
+    _rx_java_version           = '3.0.11'
+    _rx_android_version        = '3.0.0'
+
+    _junit_version             = '4.13.2'
+    _mockito_version           = '2.19.0'
+    _hamcrest_version          = '1.3'
+    _espresso_core_version     = '3.3.0'
 }
