--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion _compiled_sdk_version
@@ -50,11 +51,18 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions{
+        jvmTarget = "1.8"
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //************************* App Libraries ******************************************************
+
+    implementation "androidx.core:core-ktx:$_ktx_core"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     // Android
     implementation "androidx.appcompat:appcompat:$_app_compat_version"
@@ -66,6 +74,7 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:$_room_library_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor "androidx.room:room-compiler:$_room_library_version"
     testImplementation "androidx.room:room-testing:$_room_library_version"
     implementation "androidx.room:room-rxjava3:$_room_library_version"
@@ -89,7 +98,7 @@ dependencies {
 
     testImplementation "junit:junit:$_junit_version"
     androidTestImplementation "junit:junit:$_junit_version"
-    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:$_espresso_core_version"
 
 
